[gd_scene load_steps=7 format=3 uid="uid://cx4x8tv8xh0l1"]

[ext_resource type="Script" uid="uid://dtpxw5qgkbu3t" path="res://entities/towers/mortar_tower.gd" id="1_15o34"]
[ext_resource type="Texture2D" uid="uid://dwcew2co30q1l" path="res://icon.svg" id="2_0f4t1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sh73x"]
radius = 1161.9333

[sub_resource type="CircleShape2D" id="CircleShape2D_wriij"]
radius = 86.46965

[sub_resource type="Gradient" id="Gradient_bls4j"]
offsets = PackedFloat32Array(0.43571427)
colors = PackedColorArray(0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_15o34"]
gradient = SubResource("Gradient_bls4j")
height = 3

[node name="Mortar" type="Area2D"]
collision_layer = 64
collision_mask = 99
script = ExtResource("1_15o34")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0f4t1")

[node name="MortarDetectionRange" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_sh73x")

[node name="MortarDamageRange" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_wriij")

[node name="MortarFireRate" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -38.0
offset_right = 32.0
offset_bottom = -34.0

[node name="MortarTowerHPBar" type="TextureProgressBar" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_progress = SubResource("GradientTexture2D_15o34")
